--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,8 +1,9 @@
-tensorflow==2.5.0
-fastapi
-uvicorn
-python-multipart
-pillow
+fastapi==0.68.0
+uvicorn==0.15.0
+python-multipart==0.0.6
+pillow==9.5.0
 tensorflow-serving-api==2.5.0
-matplotlib
-numpy
+matplotlib==3.5.3
+numpy==1.21.6
+typing-extensions==4.0.1
+tensorflow==2.5.0
