--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -6,4 +6,7 @@ tensorflow-serving-api==2.5.0
 matplotlib==3.5.3
 numpy==1.21.6
 typing-extensions==4.0.1
+tensorboard==2.11.2
 tensorflow==2.5.0
+grpcio==1.34.0
+protobuf==3.9.2
