--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,80 +1,8 @@
-absl-py==2.0.0
-annotated-types==0.6.0
-anyio==3.7.1
-asttokens==2.4.0
-astunparse==1.6.3
-backcall==0.2.0
-cachetools==5.3.1
-certifi==2023.7.22
-charset-normalizer==3.3.0
-click==8.1.7
-colorama==0.4.6
-contourpy==1.1.1
-cycler==0.12.1
-decorator==5.1.1
-environs==9.5.0
-executing==2.0.0
-fastapi==0.104.0
-fastapi_cors==0.0.6
-flatbuffers==23.5.26
-fonttools==4.43.1
-gast==0.5.4
-google-auth==2.23.3
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.59.0
-h11==0.14.0
-h5py==3.10.0
-idna==3.4
-ipython==8.16.1
-jedi==0.19.1
-keras==2.14.0
-kiwisolver==1.4.5
-libclang==16.0.6
-Markdown==3.5
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-matplotlib==3.8.0
-matplotlib-inline==0.1.6
-ml-dtypes==0.2.0
-numpy==1.26.1
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==23.2
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==10.1.0
-prompt-toolkit==3.0.39
-protobuf==4.24.4
-pure-eval==0.2.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pydantic==2.4.2
-pydantic_core==2.10.1
-Pygments==2.16.1
-pyparsing==3.1.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-multipart==0.0.6
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-six==1.16.0
-sniffio==1.3.0
-stack-data==0.6.3
-starlette==0.27.0
-tensorboard==2.14.1
-tensorboard-data-server==0.7.1
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-intel==2.14.0
-tensorflow-io-gcs-filesystem==0.31.0
+tensorflow==2.5.0
+fastapi
+uvicorn
+python-multipart
+pillow
 tensorflow-serving-api==2.5.0
-termcolor==2.3.0
-traitlets==5.11.2
-typing_extensions==4.8.0
-urllib3==2.0.7
-uvicorn==0.23.2
-wcwidth==0.2.8
-Werkzeug==3.0.0
-wrapt==1.14.1
+matplotlib
+numpy
